--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   riverpod: ^2.6.1
   go_router: ^15.1.1
   flutter_riverpod: ^2.6.1
-  flutter_login: ^4.1.1
+  flutter_login: ^5.0.0
   http: ^1.4.0
   material: ^1.0.0+2
   font_awesome_flutter: ^10.8.0
@@ -75,8 +75,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/logo_topbest.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
